fix: white overflow on mobile devices

--- a/style.css
+++ b/style.css
@@ -258,6 +258,11 @@ input:focus {
 
 
 @media screen and (max-width:600px) {
+    html, body {
+        overflow-x: hidden;
+        margin: 0;
+        padding: 0;
+    }
     #navbar {
         display: flex;
         flex-direction: column; 
@@ -301,7 +306,13 @@ input:focus {
     }
 }
 
-@media only screen and (min-width: 600px) and (max-width: 1023px) {
+@media only screen and (max-width: 1024px) and (min-width:600px){
+    
+    html, body {
+        overflow-x: hidden;
+        margin: 0;
+        padding: 0;
+    }
     
     #navbar {
         display: flex;
